# traceai

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json  settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/: CompareView.tsx  FilterBar.tsx  JsonViewer.tsx  KeySettings.tsx  ModelPicker.tsx  ReplayBanner.tsx  ResizeHandle.tsx  SpanDetail.tsx  SpanTimeline.tsx  SpanTree.tsx  StatusBadge.tsx  TraceDetail.tsx  TraceHeader.tsx  TraceList.tsx  TraceListItem.tsx
dashboard/src/hooks/: useModels.ts  useProviders.ts  useSpans.ts  useTheme.ts  useTraces.ts
dashboard/src/types/: api.ts
dashboard/src/utils/: compare.ts  diff.ts
docs/: quickstart.md
examples/: anthropic_agent.py  basic_trace.py  custom_agent.py  multi_provider.py  openai_agent.py  sampling.py  streaming_anthropic.py  streaming_openai.py
tests/: test_cli.py  test_costs.py  test_models.py  test_server.py  test_storage.py  test_tracer.py
tests/integrations/: test_anthropic_patch.py  test_openai_patch.py
traceai/: __init__.py  cli.py  costs.py  fallback_prices.json  models.py  server.py  storage.py  tracer.py
traceai/dashboard/: index.html
traceai/integrations/: __init__.py  anthropic.py  openai.py
