[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traceai"
version = "0.1.0"
description = "Chrome DevTools for AI agents. Debug prompts, tool calls, memory, and reasoning with a visual execution timeline."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "debugging", "tracing", "observability", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "rich>=13.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mypy>=1.10",
    "ruff>=0.4",
    "openai>=1.0",
    "anthropic>=0.25",
]

[project.scripts]
traceai = "traceai.cli:app"

[project.urls]
Homepage = "https://github.com/arnavvj/traceai"
Repository = "https://github.com/arnavvj/traceai"
Issues = "https://github.com/arnavvj/traceai/issues"

[tool.hatch.build.targets.wheel]
packages = ["traceai"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
